Agregando el logo de WankaDev

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
   </head>
   <body>
     <h1>WankaDev</h1>
+    <div class="container">
+      <nav class="nav-main">
+        <img src="img/brand.svg" alt="WankaDev LOGO" class="nav-brand" />
+      </nav>
+    </div>
   </body>
 </html>
