Agregando el encabezado HTML

--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WankaDev</title>
+    <!-- FONT AWESOME (BOOTSTRAP) -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- FONT RALEWAY  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- CSS PERSONALIZACIÓN -->
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>WankaDev</h1>
     <div class="container">
       <nav class="nav-main">
         <img src="img/brand.svg" alt="WankaDev LOGO" class="nav-brand" />
+        <ul class="nav-menu">
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Noticias</a></li>
+          <li><a href="#">Eventos</a></li>
+          <li><a href="#">Artículos</a></li>
+          <li><a href="#">Recursos</a></li>
+          <li><a href="#">Contacto</a></li>
+          <li><a href="#">Acerca de</a></li>
+        </ul>
+        <ul class="nav-menu-right">
+          <li>
+            <a href="#">
+              <i class="fas fa-search"></i>
+            </a>
+          </li>
+        </ul>
       </nav>
+      <hr />
     </div>
   </body>
 </html>
