Creando y dando estilos a mi hero-image

--- a/index.html
+++ b/index.html
@@ -44,6 +44,18 @@
         </ul>
       </nav>
       <hr />
+
+      <!-- HERO IMAGE -->
+      <header class="hero-image">
+        <h2>El Mejor Sitio Dev de Huancayo</h2>
+        <p>
+          Encuentra la mejor y más nueva información acerca de este maravilloso
+          mundo de la programación en Huancayo.
+        </p>
+        <a class="btn" href="#"
+          >Leer más <i class="fas fa-angle-double-right"></i
+        ></a>
+      </header>
     </div>
   </body>
 </html>
