Agregando columnas de contenido y diseñandolas.

--- a/index.html
+++ b/index.html
@@ -50,12 +50,51 @@
         <h2>El Mejor Sitio Dev de Huancayo</h2>
         <p>
           Encuentra la mejor y más nueva información acerca de este maravilloso
-          mundo de la programación en Huancayo.
+          mundo de la programación en Huancayo y el MUNDO.
         </p>
         <a class="btn" href="#"
           >Leer más <i class="fas fa-angle-double-right"></i
         ></a>
       </header>
+      <!-- NEWS CARDS -->
+      <div class="news-cards">
+        <div>
+          <img src="./img/devfesthyo.webp" alt="DevFest Huancayo" />
+          <h3>Lorem, ipsum.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
+            veritatis?
+          </p>
+          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/devfesthyo.webp" alt="DevFest Huancayo" />
+          <h3>Lorem, ipsum.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
+            veritatis?
+          </p>
+          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/devfesthyo.webp" alt="DevFest Huancayo" />
+          <h3>Lorem, ipsum.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
+            veritatis?
+          </p>
+          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/devfesthyo.webp" alt="DevFest Huancayo" />
+          <h3>Lorem, ipsum.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
+            veritatis?
+          </p>
+          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
