Añadiendo contenido, estilos y volviendo responsiva a la página

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="menu-btn"><i class="fas fa-bars"></i></div>
     <div class="container">
       <nav class="nav-main">
         <img src="img/brand.svg" alt="WankaDev LOGO" class="nav-brand" />
@@ -59,7 +60,7 @@
       <!-- NEWS CARDS -->
       <div class="news-cards">
         <div>
-          <img src="./img/devfesthyo.webp" alt="DevFest Huancayo" />
+          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
           <h3>Lorem, ipsum.</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
@@ -68,7 +69,7 @@
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
-          <img src="./img/devfesthyo.webp" alt="DevFest Huancayo" />
+          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
           <h3>Lorem, ipsum.</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
@@ -77,7 +78,7 @@
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
-          <img src="./img/devfesthyo.webp" alt="DevFest Huancayo" />
+          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
           <h3>Lorem, ipsum.</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
@@ -86,7 +87,7 @@
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
-          <img src="./img/devfesthyo.webp" alt="DevFest Huancayo" />
+          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
           <h3>Lorem, ipsum.</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
@@ -95,6 +96,129 @@
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
       </div>
+      <section class="cards-banner-one">
+        <div class="content">
+          <h2>¡Los nuevos eventos ya están aquí!</h2>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Repudiandae asperiores dolore sed tenetur, minima blanditiis fugiat
+            at cumque error quia!
+          </p>
+          <a href="#" class="btn"
+            >Leer Más <i class="fas fa-angle-double-right"></i
+          ></a>
+        </div>
+      </section>
+      <!-- NEWS CARDS -->
+      <div class="news-cards">
+        <div>
+          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
+          <h3>Lorem, ipsum.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
+            veritatis?
+          </p>
+          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
+          <h3>Lorem, ipsum.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
+            veritatis?
+          </p>
+          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
+          <h3>Lorem, ipsum.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
+            veritatis?
+          </p>
+          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+        </div>
+        <div>
+          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
+          <h3>Lorem, ipsum.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
+            veritatis?
+          </p>
+          <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
+        </div>
+      </div>
+      <section class="cards-banner-two">
+        <div class="content">
+          <h2>Lorem, ipsum dolor.</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
+            voluptates sit, asperiores dicta debitis aspernatur nesciunt sunt
+            mollitia voluptatem nihil, harum sapiente consectetur! A dolorem
+            voluptatum similique velit nulla corporis.
+          </p>
+          <a href="#" class="btn"
+            >Leer más <i class="fas fa-angle-double-right"></i
+          ></a>
+        </div>
+      </section>
+      <section class="social">
+        <p>Nuestras Redes Sociales</p>
+        <div class="links">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-linkedin"></i></a>
+        </div>
+      </section>
     </div>
+    <div class="footer-links">
+      <div class="footer-container">
+        <ul>
+          <li>
+            <a href="#"><h3>Titulo Uno</h3></a>
+          </li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="#"><h3>Titulo Uno</h3></a>
+          </li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="#"><h3>Titulo Uno</h3></a>
+          </li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+        </ul>
+        <ul>
+          <li>
+            <a href="#"><h3>Titulo Uno</h3></a>
+          </li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Blockchain</a></li>
+        </ul>
+      </div>
+    </div>
+    <footer class="footer"><h3>WankaDev Copyright</h3></footer>
   </body>
 </html>
