Dando interactividad a la barra lateral con JS

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="menu-btn"><i class="fas fa-bars"></i></div>
+    <div class="menu-btn show"><i class="fas fa-bars"></i></div>
     <div class="container">
       <nav class="nav-main">
         <img src="img/brand.svg" alt="WankaDev LOGO" class="nav-brand" />
-        <ul class="nav-menu">
+        <ul class="nav-menu show">
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Noticias</a></li>
           <li><a href="#">Eventos</a></li>
@@ -220,5 +220,6 @@
       </div>
     </div>
     <footer class="footer"><h3>WankaDev Copyright</h3></footer>
+    <script src="main.js"></script>
   </body>
 </html>
