Agregando animaciones y secciones en la página.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="icon" href="img/brand.svg" />
     <!-- FONT RALEWAY  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -48,10 +49,10 @@
 
       <!-- HERO IMAGE -->
       <header class="hero-image">
-        <h2>El Mejor Sitio Dev de Huancayo</h2>
+        <h2>El Mejor Sitio Dev del Perú</h2>
         <p>
           Encuentra la mejor y más nueva información acerca de este maravilloso
-          mundo de la programación en Huancayo y el MUNDO.
+          mundo de la programación en Huancayo, Perú y el MUNDO.
         </p>
         <a class="btn" href="#"
           >Leer más <i class="fas fa-angle-double-right"></i
@@ -61,10 +62,11 @@
       <div class="news-cards">
         <div>
           <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
-          <h3>Lorem, ipsum.</h3>
+          <h3>Devfest HYO 2024</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
-            veritatis?
+            ¡Conecta con la comunidad tecnológica local! Aprende sobre las
+            últimas tendencias en desarrollo y tecnologías de Google en un
+            evento lleno de sorpresas.
           </p>
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
@@ -87,11 +89,11 @@
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
-          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
-          <h3>Lorem, ipsum.</h3>
+          <img src="./img/cibersecconf.jfif" alt="DevFest Huancayo" />
+          <h3>CiberSecConf 2024</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
-            veritatis?
+            Inka 2077 es la conferencia anual organizada por CiberSecUNI, una
+            comunidad dedicada a la ciberseguridad en Perú y Latinoamérica.
           </p>
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
@@ -153,9 +155,7 @@
           <h2>Lorem, ipsum dolor.</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
-            voluptates sit, asperiores dicta debitis aspernatur nesciunt sunt
-            mollitia voluptatem nihil, harum sapiente consectetur! A dolorem
-            voluptatum similique velit nulla corporis.
+            voluptates sit, asperiores dicta debitis aspernatur.
           </p>
           <a href="#" class="btn"
             >Leer más <i class="fas fa-angle-double-right"></i
@@ -220,6 +220,9 @@
       </div>
     </div>
     <footer class="footer"><h3>WankaDev Copyright</h3></footer>
+    <!-- SCROLL REVEAL (JAVASCRIPT) -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- CUSTOM JS -->
     <script src="main.js"></script>
   </body>
 </html>
