Añadiendo contenido informativo e imágenes al inicio.

--- a/index.html
+++ b/index.html
@@ -71,25 +71,29 @@
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
-          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
-          <h3>Lorem, ipsum.</h3>
+          <img
+            src="./img/internetarchive.webp"
+            alt="Hackeo a Internet Archive"
+          />
+          <h3>HACKERS DESTRUYEN INTERNET ARCHIVE</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
-            veritatis?
+            Internet Archive ha sido hackeado, dejando inaccesibles millones de
+            páginas web, bibliotecas y archivos históricos.
           </p>
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
-          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
-          <h3>Lorem, ipsum.</h3>
+          <img src="./img/cleancode.jfif" alt="Clean Code" />
+          <h3>Clean Code: ¿Qué es y por dónde empezar?</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
-            veritatis?
+            Se basa en la aplicación de técnicas sencillas con las que generamos
+            un código claro e intuitivo que es más fácil de modificar.
           </p>
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
+
         <div>
-          <img src="./img/cibersecconf.jfif" alt="DevFest Huancayo" />
+          <img src="./img/cibersecconf.jfif" alt="La CiberSecConf 2024" />
           <h3>CiberSecConf 2024</h3>
           <p>
             Inka 2077 es la conferencia anual organizada por CiberSecUNI, una
@@ -102,9 +106,8 @@
         <div class="content">
           <h2>¡Los nuevos eventos ya están aquí!</h2>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-            Repudiandae asperiores dolore sed tenetur, minima blanditiis fugiat
-            at cumque error quia!
+            Descubre que nuevos eventos tecnológicos te esperan en la región y
+            en el Perú.
           </p>
           <a href="#" class="btn"
             >Leer Más <i class="fas fa-angle-double-right"></i
@@ -114,48 +117,53 @@
       <!-- NEWS CARDS -->
       <div class="news-cards">
         <div>
-          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
-          <h3>Lorem, ipsum.</h3>
+          <img src="./img/googlehtml.webp" alt="Curso HTML" />
+          <h3>Google lanza un nuevo curso gratuito de HTML</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
-            veritatis?
+            Este nuevo curso, llamado “Learn HTML!”, está disponible en la
+            plataforma Web.dev de Google, cuenta con la experiencia de tutores
+            avanzados.
           </p>
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
-          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
-          <h3>Lorem, ipsum.</h3>
+          <img src="./img/googleincognito.avif" alt="Google Espía" />
+          <h3>Googlete espía al navegar en Chrome con modo incógnito</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
-            veritatis?
+            Sí, Google confirma lo que todos sabíamos: te espía cuando usas el
+            Modo Incógnito y fué multada con 5.100 millones de euros, ¿Estás
+            Seguro?
           </p>
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
-          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
-          <h3>Lorem, ipsum.</h3>
+          <img src="./img/css4-5.jpg" alt="CSS4 Y CSS5" />
+          <h3>CSS4 y CSS5 están por llegar</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
-            veritatis?
+            El mundo del desarrollo web está a punto de recibir una
+            actualización emocionante con la llegada de CSS4 y CSS5. Estas
+            nuevas versiones prometen simplicar y potenciar la web para todos
+            los usuarios.
           </p>
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
         <div>
-          <img src="./img/devfestyyo.webp" alt="DevFest Huancayo" />
-          <h3>Lorem, ipsum.</h3>
+          <img src="./img/samsung.webp" alt="cursos por Samsung" />
+          <h3>Cursos gratis con certificación por Samsung</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus,
-            veritatis?
+            Samsung ha desarrollado Code IoT, una plataforma de aprendizaje en
+            línea gratuita que aborda conceptos esenciales de la Internet de las
+            Cosas (IoT), programación y electrónica.
           </p>
           <a href="#">Leer más <i class="fas fa-angle-double-right"></i></a>
         </div>
       </div>
       <section class="cards-banner-two">
         <div class="content">
-          <h2>Lorem, ipsum dolor.</h2>
+          <h2>¡Los mejores cursos ya están aquí!</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi
-            voluptates sit, asperiores dicta debitis aspernatur.
+            Descubre la mejor información acerca de las capacitaciones y cursos
+            que potenciarán tu CV y Portafolio; lo mejor de todo, son GRATIS.
           </p>
           <a href="#" class="btn"
             >Leer más <i class="fas fa-angle-double-right"></i
@@ -165,9 +173,15 @@
       <section class="social">
         <p>Nuestras Redes Sociales</p>
         <div class="links">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/luccianovivass" target="_blank"
+            ><i class="fab fa-facebook-f"></i
+          ></a>
+          <a href="https://www.youtube.com/@maxicodifique" target="_blank"
+            ><i class="fab fa-youtube"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/lumaxiviba/" target="_blank"
+            ><i class="fab fa-linkedin"></i
+          ></a>
         </div>
       </section>
     </div>
@@ -175,47 +189,47 @@
       <div class="footer-container">
         <ul>
           <li>
-            <a href="#"><h3>Titulo Uno</h3></a>
+            <a href="#"><h3>Tecnologías</h3></a>
           </li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">HTML</a></li>
+          <li><a href="#">CSS</a></li>
+          <li><a href="#">JavaScript</a></li>
+          <li><a href="#">Samsung</a></li>
+          <li><a href="#">Flutter</a></li>
+          <li><a href="#">NodeJS</a></li>
         </ul>
         <ul>
           <li>
-            <a href="#"><h3>Titulo Uno</h3></a>
+            <a href="#"><h3>Noticias</h3></a>
           </li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Hackeo a Internet</a></li>
+          <li><a href="#">Google te espía</a></li>
+          <li><a href="#">Google borra Adblockers</a></li>
+          <li><a href="#">Windows 10 morirá</a></li>
+          <li><a href="#">HarmonyOS Next</a></li>
+          <li><a href="#">Firefox y su seguridad</a></li>
         </ul>
         <ul>
           <li>
-            <a href="#"><h3>Titulo Uno</h3></a>
+            <a href="#"><h3>Contacto</h3></a>
           </li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Conócenos</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">Youtube</a></li>
+          <li><a href="#">Linkedln</a></li>
+          <li><a href="#">Teléfono</a></li>
+          <li><a href="#">Instagram</a></li>
         </ul>
         <ul>
           <li>
-            <a href="#"><h3>Titulo Uno</h3></a>
+            <a href="#"><h3>Acerca De</h3></a>
           </li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
-          <li><a href="#">Blockchain</a></li>
+          <li><a href="#">Quiénes Somos</a></li>
+          <li><a href="#">Nuestros Valores</a></li>
+          <li><a href="#">Nuestro Propósito</a></li>
+          <li><a href="#">Nuestra Visión</a></li>
+          <li><a href="#">Nuestra Misión</a></li>
+          <li><a href="#">Nuestras Aspiraciones</a></li>
         </ul>
       </div>
     </div>
