Agregando encabezado y funcionalidades a las secciones.

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <nav class="nav-main">
         <img src="img/brand.svg" alt="WankaDev LOGO" class="nav-brand" />
         <ul class="nav-menu show">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Noticias</a></li>
-          <li><a href="#">Eventos</a></li>
-          <li><a href="#">Artículos</a></li>
-          <li><a href="#">Recursos</a></li>
-          <li><a href="#">Contacto</a></li>
-          <li><a href="#">Acerca de</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="noticias.html">Noticias</a></li>
+          <li><a href="eventos.html">Eventos</a></li>
+          <li><a href="articulos.html">Artículos</a></li>
+          <li><a href="recursos.html">Recursos</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
+          <li><a href="acercade.html">Acerca de</a></li>
         </ul>
         <ul class="nav-menu-right">
           <li>
